--- a/aspirin/css/styles_mob.css
+++ b/aspirin/css/styles_mob.css
@@ -25,6 +25,15 @@ main {
     /* justify-content: space-around;
     align-items: center; */
 }
+.background-photo {
+    display: block;
+    background-image: url(../img/city.jpg);
+    overflow: hidden; 
+    position: fixed;
+    z-index: 2; 
+    width: 100%;
+    height: 100%;
+}
 .background-video {
     display: none;
     position: fixed;
@@ -33,7 +42,7 @@ main {
     height: 100%;
     overflow: hidden;
 }
-.header-titlebox {
+.header-logo {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -67,39 +76,29 @@ iframe {
     padding: 10px 0 10px;
     margin: 0 auto 15px;
 }
-.header-titlebox__title {
-    font-size: 38px;
-    line-height: 1.4;
-    margin: 0;
-    color: #ececec;
-    animation: fadeInUp 2s cubic-bezier(0.215, 0.610, 0.355, 1);
-    
-}
-.header-titlebox__divider, 
-.header-titlebox__describe {
-    margin: 0 auto 10px;
-    color: #f1c40f;
-}
-.header-titlebox__divider {
+.header-logo__picture-box {
+    width: 150px;
     margin-bottom: 20px;
-    animation: zoomIn 1.4s cubic-bezier(0.215, 0.610, 0.355, 1);
- }
-
-.header-titlebox__describe {
+    animation: fadeInUp 1.6s cubic-bezier(0.215, 0.610, 0.355, 1);  
+} 
+.header-logo__label-box {
+    width: 150px;
     margin-bottom: 80px;
-    font-size: 27px;
-    animation: fadeInDown 2s cubic-bezier(0.215, 0.610, 0.355, 1);
+    animation: fadeInDown 1.6s cubic-bezier(0.215, 0.610, 0.355, 1);
+}
+.full-logo {
+    max-width: 100%;
 }
 .order-button {
-    width: 170px;
+    width: 150px;
     height: 55px;
     background-color: transparent;
     color: #fff;
-    border: 2px solid #f1c40f;
+    border: 2px solid #fff;
     text-transform: uppercase;
     font-size: 14px;
     transition-duration: 300ms;
-    animation: jackInTheBox 3s cubic-bezier(0.215, 0.610, 0.355, 1);
+    animation: jackInTheBox 2.7s cubic-bezier(0.215, 0.610, 0.355, 1);
 }
 .order-button:hover {
     transform: scale(1.1);
@@ -175,6 +174,7 @@ iframe {
 }
 .clients {
     width: 100%;
+    background-color: rgba(255, 255, 255, 0.3);
 }
 .clients__title {
     padding-top: 20px;
@@ -274,6 +274,9 @@ footer {
     transform: scale(1.07);
 }
 @media (min-width: 1028px) {
+    .background-photo{
+        display: none; 
+    }
     .background-video {
         display: block;
     }
