--- a/aspirin/css/styles_my.css
+++ b/aspirin/css/styles_my.css
@@ -205,24 +205,11 @@ iframe {
 }
 .clients {
     width: 100%;
+    background-color: rgba(255, 255, 255, 0.9);
 }
 .clients__title {
     padding-top: 20px;
     margin-bottom: 10px;
-}
-.clients::after {
-    display: block;
-    content: "";
-    width: 100%;
-    height: 5px;
-    background: linear-gradient(rgb(105, 105, 105), #fff );
-}
-.clients::before {
-    display: block;
-    content: "";
-    width: 100%;
-    height: 5px;
-    background: linear-gradient(rgb(255, 255, 255), rgb(105, 105, 105));
 }
 .clients__list {
     width: 70%;
