--- a/aspirin/css/styles_light.css
+++ b/aspirin/css/styles_light.css
@@ -78,6 +78,10 @@ main {
     text-decoration: none;
     color: #fff;
 }
+.navigation-menu__link:hover {
+    color: #d4d4d4;
+    border-bottom: 1px solid #d4d4d4;
+} 
 .background-photo {
     display: block;
     background-image: url(../img/city.jpg);
@@ -112,13 +116,14 @@ main {
     overflow: hidden;
 } */
 .header-logo {
+    width: 95%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     position: absolute;
     left: 50%;
-    top: 50%;
+    top: 60%;
     transform: translate(-50%, -50%);
     z-index: 3;
 }
@@ -127,12 +132,12 @@ main {
     height: 100%; 
 } */
 .header-logo__picture-box {
-    width: 90px;
+    width: 30%;
     margin-bottom: 20px;
     animation: flipInX 1.5s cubic-bezier(0.215, 0.610, 0.355, 1);  
 } 
 .header-logo__label-box {
-    width: 150px;
+    width: 50%;
     margin-bottom: 80px;
     animation: fadeInUp 2.5s cubic-bezier(0.215, 0.610, 0.355, 1);
 }
@@ -140,7 +145,7 @@ main {
     max-width: 100%;
 }
 .order-button {
-    width: 150px;
+    width: 50%;
     height: 55px;
     background-color: transparent;
     color: #fff;
@@ -153,17 +158,28 @@ main {
 }
 .order-button:hover {
     transform: scale(1.1);
+    border: 2px solid #d4d4d4;
     transition-duration: 300ms;
+}
+.order-button:focus {
+    outline: #000;
+}
+.visible {
+    display: block;
+}
+.invisible {
+    display: none;
 }
 .modal-window {
     position: absolute;
-    display: none;
     top: 0;
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: rgba(36, 48, 46, 0.92);
+    /* background-color: rgba(31, 31, 31, 0.22); */
     z-index: 4;
+    animation: flipInX 0.9s cubic-bezier(0.215, 0.610, 0.355, 1);  
+
 }
 .modal-window__screen {
     position: absolute;
@@ -172,32 +188,34 @@ main {
     transform: translate(-50%, -50%);
     width: 80%;
     text-align: center;
-    background-color: #cd853f;
-    box-shadow: 6px 4px 3px 3px rgba(49, 49, 49, 0.5);
+    background-color: rgba(255, 255, 255, 0.98);
 }
 .modal-window__form {
     padding-top: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
     width: 95%;
+    height: 40vh;
     margin: 0 auto;
 }
 .modal-window__input {
     width: 95%;
-    height: 40px;
+    height: 45px;
     margin: 0 auto 10px;
     font-size: 20px;
+    outline: 1px solid #000;
 }
-.span-sent {
-    text-transform: uppercase;
-    margin: auto;
-    font-size: 20px;
-}
-.modal-window__button{
+.modal-window__submit {
     display: inline-block;
-    width: 95%;
-    height: 40px;
+    width: 96%;
+    height: 49px;
     margin: 5px auto 10px;
     border-style: none;
-    background-color: #afeeee;
+    background-color: #181818;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 18px;
 }
 .main-wrapper {
     width: 100%;
@@ -215,7 +233,7 @@ main {
     font-size: 22px;
     font-weight: 300;
     margin: 3px auto 20px;
-    padding: 0 5px;
+    padding: 7px 5px 0;
 }
 .about__services-pretitle {
     font-family: 'Poiret One';
@@ -278,9 +296,15 @@ main {
     background-color: #fff;
     width: 100%;
 }
-.showreel__container {
-    width: 96%;
+/* .showreel__container {
+    width: 100%;
     margin: 0 auto;
+    box-shadow: 2px 2px 6px 5px rgba(0, 0, 0, 0.75);
+} */
+.showreel__video {
+    width: 100%;
+    margin: 0 auto;
+    box-shadow: 2px 2px 6px 5px rgba(0, 0, 0, 0.75);
 }
 .clients {
     width: 100%;
@@ -321,7 +345,7 @@ main {
     color: #000;
     border: 2px solid #000;
     width: 140px;
-    margin: 0 10px 0;
+    margin: 2px 10px 2px;
 }
 footer {
     padding: 35px 0 40px;
@@ -360,6 +384,7 @@ footer {
     border-radius: 8px;
     border: 2px solid #fff;
     color: transparent;
+    transition-duration: 300ms;
 }
 .socials__ico {
     width: 40px;
@@ -367,16 +392,21 @@ footer {
     fill: #fff;
 }
 .socials__link:hover {
-    transform: scale(1.07);
-    border-color: #f1c40f; 
+    transform: scale(1.2);
+    border-radius: 30px;
+    /* border-color: #8a8a8a;  */
+    transition-duration: 300ms;
 }
 .socials__link:hover .socials__ico {
-    fill: #f1c40f;
+    fill: #d4d4d4;
     transform: scale(1.07);
 }
 @media (min-width: 576px) {
     .clients__list {
         width: 70%;
+    }
+    .header-logo {
+        width: 65%;
     }  
     .clients__item {
         margin: 0 12px;
@@ -403,18 +433,24 @@ footer {
         font-size: 16px;
         width: 140px;
     }
-    .header-logo__picture-box {
-        width: 100px;
+    .modal-window__screen {
+        width: 40%;
     }
-    .header-logo__label-box,  
+    .header-logo {
+        width: 50%;
+    }
+    /* .header-logo__picture-box {
+        width: 100px;
+    } */
+    /* .header-logo__label-box,  
     .order-button {
-        width: 210px;
-    }  
+        width: 230px;
+    }   */
     .about__services-item {
         width: 30%;
     }
-    .showreel__container {
-        width: 85%;
+    .showreel__video {
+        width: 60%;
     }
     .clients {
         padding-bottom: 30px;
@@ -438,14 +474,26 @@ footer {
     .navigation-menu__list {
         width: 45%;
     }
-    .header-logo__label-box {
-        margin-bottom: 150px;
+    .header-logo {
+        width: 35%;
     }
+    .modal-window__screen {
+        width: 30%;
+    }
+    .modal-window__form {
+        height: 32vh;
+    }
+    /* .header-logo__label-box {
+        margin-bottom: 150px;
+    } */
     .about__services-item::before {
         width: 50px;
         height: 50px;
     }
     .about__services-subtitle {
         padding-top: 40px;
+    }
+    .showreel {
+        padding-top: 52px;
     }
 }
